--- a/lista3/tasks.json
+++ b/lista3/tasks.json
@@ -3,5 +3,10 @@
     "id": 1,
     "description": "finish homework",
     "done": false
+  },
+  {
+    "id": 2,
+    "description": "finish WORK",
+    "done": false
   }
 ]
